--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="main-container">
         <nav class="flex">
             <a href="#"><i onclick="reload()" class="fa-solid fa-house"></i></a>
-            <div>
-                <ul class="flex">
+            <div id="news-type">
+                <ul  class="flex">
                     <li class="hover-link list-text"id="ipl" onclick="onNavItemClick('ipl')">IPL</li>
                     <li class="hover-link list-text"id="finance" onclick="onNavItemClick('finance')">Finance</li>
                     <li class="hover-link list-text" id="politics" onclick="onNavItemClick('politics')">Politics</li>
