--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <template id="news-card-template">
         <div class="box card hover">
-            <img id="news-image" src="./assets/news-logo.jpg" alt="News Image">
+            <img loading="lazy" id="news-image" src="./assets/news-logo.jpg" alt="News Image">
             <h3 id="news-header">Lorem ipsum dolor sit.</h3>
             <h6 id="news-source">End Date 26/8/2024</h6>
             <p id="news-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, repellat? Minus
